# github-markdown-pdf

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/: copilot-instructions.md
.github/workflows/: test.yml
docs/: README.md
docs/examples/: basic_usage.py  batch_conversion.py  custom_styling.py
github_markdown_pdf/: __init__.py  converter.py  exceptions.py  utils.py
scripts/: md2pdf.py
tests/: test_converter.py
tests/test_data/: sample.md
