[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "github-markdown-pdf"
dynamic = ["version"]
description = "Get proper formatted PDF using Python without any problem"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "dhruv kejriwal"},
]
keywords = ["markdown", "pdf", "converter", "github"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Text Processing :: Markup",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dependencies = [
    "markdown>=3.4.0",
    "weasyprint>=56.0",
    "Pygments>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "flake8",
    "black",
    "isort",
    "mypy",
    "twine",
    "build",
]

[project.urls]
Homepage = "https://github.com/dhruvkej9/github-markdown-pdf"
Repository = "https://github.com/dhruvkej9/github-markdown-pdf"
Issues = "https://github.com/dhruvkej9/github-markdown-pdf/issues"
Documentation = "https://github.com/dhruvkej9/github-markdown-pdf#readme"

[project.scripts]
md2pdf = "scripts.md2pdf:main"

[tool.setuptools.dynamic]
version = {attr = "github_markdown_pdf.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["github_markdown_pdf*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
]

[tool.coverage.run]
source = ["github_markdown_pdf"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["github_markdown_pdf"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true