[metadata]
name = github-markdown-pdf
version = attr: github_markdown_pdf.__version__
author = dhruv kejriwal
author_email = 
description = Get proper formatted PDF using Python without any problem
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dhruvkej9/github-markdown-pdf
project_urls =
    Bug Reports = https://github.com/dhruvkej9/github-markdown-pdf/issues
    Source = https://github.com/dhruvkej9/github-markdown-pdf
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Text Processing :: Markup
    Topic :: Utilities

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.8
install_requires =
    markdown>=3.4.0
    weasyprint>=56.0
    Pygments>=2.10.0

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    md2pdf = scripts.md2pdf:main

[options.extras_require]
dev =
    pytest>=6.0
    pytest-cov
    flake8
    black
    isort
    mypy
    twine
    build

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = 
    --verbose
    --tb=short
    --strict-markers

[coverage:run]
source = github_markdown_pdf
omit = 
    */tests/*
    */test_*
    setup.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude =
    .git,
    __pycache__,
    .venv,
    .eggs,
    *.egg,
    dist,
    build

[isort]
profile = black
multi_line_output = 3
line_length = 88
known_first_party = github_markdown_pdf

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
ignore_missing_imports = True